home page requires final touches

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,59 @@
+.main-page{
+    height: 100vh; 
+    width:  100vw; 
+    /* border: 2px solid red */
+}
+.foodpic{
+    max-width: 100%;
+}
+
+.recipe-box{
+    margin-left: -400px;
+    width: 200px;
+    height: 200px;
+    overflow:hidden;
+    position:relative;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+   /* border: 2px solid blue; */
+   transition: .5s ease;
+   border-radius: 5px;
+   max-width: 100%;
+}
+
+.customStyle{
+    flex-shrink:0;
+      -webkit-flex-shrink: 0;
+      max-width:70%;
+      max-height:90%;
+}
+
+.recipe-box:hover {
+    /* background-color: blueviolet; */
+    background-color: bisque;
+    opacity: 0.3;
+    /* border: 2px solid blueviolet !important; */
+    transition: .5s ease;
+
+}
+
+.b1{
+    margin-top: 75%;
+    margin-left: 10%;
+    width: 100%;
+    height: 12%;
+    border-radius: 5px;
+}
+
+.boxes{
+    padding-left:-100%;
+    width: 900px;
+}
+/* .morebutton{
+    padding: 250px
+}
+
 .container {
     position: relative;
     width: 50%;
@@ -13,11 +69,14 @@
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
 }
-
-.col{
-    display: inline-block;
-}
-
+ 
+ customStyle{
+    width: 100%;
+    height: 100%;
+    overflow:hidden;
+    position:relative;
+} 
+ 
 .row div{
     width: 100%;
     float: none;
@@ -26,6 +85,7 @@
     display: inline-block;
     zoom: 1;
 }
+
 
 .image{
     display: block;
@@ -39,19 +99,30 @@
     opacity: 1;
     transition: .5s ease;
     backface-visibility: hidden;
+    float: left;
+    margin: 20px;
 }
-
+*/
 .description {
+    width: 50%;
+    height: 50%;
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 50%;
-    left: 50%;
+     top: 50%;
+    left: 50%; 
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
+  }  
+  .description:hover {
+      opacity: 1;
+      cursor: pointer;
+      color:#fff;
+      background-color: rgb(0, 99, 0);
   }
 
+/*  
   .col:hover .image {
     opacity: 0.3;
   }
@@ -59,13 +130,13 @@
   .col:hover .description {
     opacity: 1;
   }
-  
-  .description{
+  */
+  /* .description{ */
       /* background-color: aqua; */
-       padding: 50% 10% 50% 10% ;
+       /* padding: 50% 10% 50% 10% ; */
       /* margin-bottom:80px;  */
-  }
-
+  /* } */
+/*
   .text {
     background-color: #4CAF50;
     color: white;
@@ -92,4 +163,46 @@
 .five{
     background-image: url(https://www.halfbakedharvest.com/wp-content/uploads/2015/07/Double-Chocolate-Coconut-oil-Zucchini-Muffins-with-Caramelized-Buckwheat-6.jpg);
 }
-
+ */
+ body { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; font-family: 'Source Sans Pro', sans-serif; letter-spacing: 0px; font-size: 17px; color: #6d767a; font-weight: 400; line-height: 34px; }
+ h1, h2, h3, h4, h5, h6 { color: #161f23; margin: 0px 0px 15px 0px; font-family: 'Source Sans Pro', sans-serif; font-weight: 700; }
+ h1 { font-size: 42px; }
+ h2 { font-size: 32px; }
+ h3 { font-size: 24px; }
+ h4 { font-size: 20px; }
+ h5 { font-size: 14px; }
+ h6 { font-size: 12px; }
+ p { margin: 0 0 20px; line-height: 1.7; }
+ p:last-child { margin: 0px; }
+ ul, ol { }
+ a { text-decoration: none; color: #6d767a; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
+ a:focus, a:hover { text-decoration: none; color: #235f83; }
+ hr { border-top: 1px solid #e4e7e9; margin-bottom: 50px; margin-top: 50px; }
+ 
+ .btn { font-family: 'Source Sans Pro', sans-serif; font-size: 16px; text-transform: capitalize; font-weight: 700; padding: 12px 24px; letter-spacing: 0px; border-radius: 3px; line-height: 2; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; transition: all 0.5s; word-wrap: break-word; white-space: normal !important; }
+ 
+ .btn-default { background-color: #ff9f2a; color: #fff; border: 1px solid #ff9f2a; }
+ .btn-default:hover { background-color: #ec8a13; color: #fff; border: 1px solid #ec8a13; }
+ .btn-default.focus, .btn-default:focus { background-color: #ec8a13; color: #fff; border: 1px solid #ec8a13; box-shadow: 0 0 0 0.1rem rgb(236, 138, 19); }
+ 
+ 
+ .form-control { border-radius: 0px; font-size: 14px; font-weight: 700; width: 100%; height: 64px; padding: 16px 20px; line-height: 1.42857143; border: 1px solid #d6dadc; background-color: #fff; text-transform: capitalize; letter-spacing: 0px; margin-bottom: 30px; -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0); box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0); -webkit-appearance: none; color: #011c28; }
+ .form-control:focus { color: #011c28; outline: 0; box-shadow: 0 0 0 0.0rem rgb(255, 255, 255); border-color: #c9cdd0; background-color: #f0f4f6; }
+ 
+ 
+ .footer { 
+     /* background-color: #08202e;  */
+    padding-top: 80px; color: #636e74; font-weight: 400; font-size: 17px; }
+ .footer-line { border-color: #152e3d; }
+ .footer-widget { padding-bottom: 50px; }
+ .footer-title { font-size: 24px; font-weight: 600; margin-bottom: 44px; color: rgb(80, 80, 80); }
+ .footer-widget ul li a { text-transform: capitalize; font-size: 17px; color: #636e74; display: block; font-weight: 600; }
+ .footer-widget ul li a:hover { color: rgb(0, 0, 0); }
+ .newsletter-form { padding-top: 15px; }
+ .newsletter-form .form-control { background-color: #1e2e38; border-color: #1e2e38; }
+ .newsletter-form .form-control:focus { color: #fff; }
+ .newsletter-form input::-webkit-input-placeholder { color: #fff !important; }
+ .newsletter-form input:focus::-webkit-input-placeholder { color: #fff !important; }
+ 
+ 
+ .tiny-footer { font-size: 14px; padding: 14px 0px; font-weight: 600; background-color: transparent; border-top: 1px solid #152e3d; color: #888d90; line-height: 1; }
