--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,26 @@
+.navbar{
+    background-color: #D2C8C8;
+}
+
 .main-page{
     height: 100vh; 
     width:  100vw; 
     /* border: 2px solid red */
 }
 .foodpic{
-    max-width: 100%;
+    height: 90px;
+}
+
+.main-page{
+    background: url(https://images.unsplash.com/photo-1542320260-f8f651de8c12?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.recipe-box img{
+    width: 100%;
 }
 
 .recipe-box{
@@ -19,7 +35,6 @@
    /* border: 2px solid blue; */
    transition: .5s ease;
    border-radius: 5px;
-   max-width: 100%;
 }
 
 .customStyle{
@@ -27,23 +42,34 @@
       -webkit-flex-shrink: 0;
       max-width:70%;
       max-height:90%;
+      border-radius: 5px;
 }
 
 .recipe-box:hover {
     /* background-color: blueviolet; */
     background-color: bisque;
-    opacity: 0.3;
+    opacity: 1;
     /* border: 2px solid blueviolet !important; */
     transition: .5s ease;
 
 }
 
 .b1{
+    background-color: #d2c8c8;
     margin-top: 75%;
     margin-left: 10%;
     width: 100%;
     height: 12%;
     border-radius: 5px;
+    transition: .5s ease;
+}
+
+.b1:hover {
+    background-color: rgb(119, 119, 119);
+    opacity: 0.5;
+    color: white;
+    /* border: 2px solid blueviolet !important; */
+    transition: .5s ease;
 }
 
 .boxes{
@@ -104,8 +130,9 @@
 }
 */
 .description {
-    width: 50%;
-    height: 50%;
+    padding-top: 10px;
+    width: 100%;
+    height: 100%;
     transition: .5s ease;
     opacity: 0;
     position: absolute;
@@ -116,7 +143,7 @@
     text-align: center;
   }  
   .description:hover {
-      opacity: 1;
+      opacity: 0.7;
       cursor: pointer;
       color:#fff;
       background-color: rgb(0, 99, 0);
@@ -191,7 +218,7 @@
  
  
  .footer { 
-     /* background-color: #08202e;  */
+    background-color: #D2C8C8;
     padding-top: 80px; color: #636e74; font-weight: 400; font-size: 17px; }
  .footer-line { border-color: #152e3d; }
  .footer-widget { padding-bottom: 50px; }
@@ -206,3 +233,16 @@
  
  
  .tiny-footer { font-size: 14px; padding: 14px 0px; font-weight: 600; background-color: transparent; border-top: 1px solid #152e3d; color: #888d90; line-height: 1; }
+.footerlogo{
+
+    font-family: 'Megrim', cursive;
+}
+
+.socialIcons{
+        cursor: pointer;
+        height: 32px;
+        margin-top: 16px;
+        margin-right: 16px;
+    }
+
+
